# lucy_base_controller

./: CMakeLists.txt  README.md  package.xml
scripts/: collision_avoidance_stop.py  lidar_controller.py  lidar_test.py  motor_controller.py  motor_controller_v1.py  motor_controller_v2.py  motor_test.py  stop_controller.py
scripts/unused/: RPi_ultrasonic.py  VL53L0X_publish.py  WiringPi_ultrasonic.py  alt_ultrasonic.py  collision_avoidance_stop.py  lidar_test.py  motor_test.py  servo_test.py  stop_wall.py  ultrasonic_sensor_controller.py
src/: cmd_vel_to_ackermann.cpp  cmd_vel_to_steering_and_speed.cpp  motor_control_debugger.cpp  motor_controller_v2.py
